--- a/src/components/banner/styles.module.css
+++ b/src/components/banner/styles.module.css
@@ -1,13 +1,8 @@
 .banner {
   width: 100%;
   height: 620px;
-  background-size: cover;
   background: url('/guidemee/background.png');
   background-size: cover;
-}
-
-.content {
-  transform: translate(0, -50%)
 }
 
 .title {
@@ -23,4 +18,20 @@
   font-weight: 400;
   font-size: 24px;
   line-height: 32px;
+  margin-bottom: 40px;
+}
+
+.button {
+  border: 1px solid #000000;
+  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.08);
+  border-radius: 100px;
+  padding: 12px 30px;
+}
+
+.button:hover {
+  color: inherit;
+}
+
+.button:active {
+  color: inherit!important;
 }
