--- a/src/components/header/styles.module.css
+++ b/src/components/header/styles.module.css
@@ -12,3 +12,11 @@
   color: #000;
   text-decoration: none;
 }
+
+.containerHeader {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  background-color: white;
+  z-index: 99999;
+}
