--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -25,3 +25,27 @@ body {
   font-size: 16px;
   line-height: 24px;
 }
+
+.mobile {
+  display: none;
+}
+
+.desktop {
+  display: none;
+}
+
+@media screen and (max-width: 768px){
+  body {
+    font-size: small;
+  }
+
+  .mobile {
+    display: block;
+  }
+}
+
+@media screen and (min-width: 992px){
+  .desktop {
+    display: block;
+  }
+}
